# llm-gate

./: .gitignore  Dockerfile.mcp.deps  Dockerfile.orchestrator  README.md  TODO  compose.yaml  docker-compose.yml  p4.md  pyproject.toml  pyrightconfig.json
apps/airflow/: Dockerfile  requirements.txt
apps/airflow/src/dags/: issues_pipeline.py
apps/airflow/src/etl/: __init__.py  db.py  extract.py  llm_enrich.py  normalize.py  quality_checks.py
apps/audit_service/: Dockerfile  requirements.txt
apps/audit_service/src/audit_service/: __init__.py  database.py  main.py  queries.py  routes_ingest.py  routes_metrics.py  routes_runs.py  schemas.py  settings.py
apps/gateway/: Dockerfile  requirements.txt
apps/gateway/src/gateway/: main.py  settings.py
apps/gateway/web-ui/: app.js  index.html  styles.css
apps/mcp_server/: Dockerfile  requirements.txt
apps/orchestrator/: Dockerfile  requirements.txt
data/: knowledge_base.json  knowledge_base_rus.json  sample_issues.json
infra/postgres/: 03_p4_schema.sql
infra/postgres/migrations/: V1__app_roles_and_users.sql  V2__llm_core_schema.sql  V3__issues_pipeline.sql
shared/: settings.py
shared/audit/: __init__.py  client.py  context.py  middleware.py  pyproject.toml  schemas.py  span.py
shared/contracts/: __init__.py  api_schemas.py  rag_schemas.py  schemas.py
shared/db/: __init__.py  connection.py  queries.py
src/app/: main.py  settings.py
src/app/api/: routes_rag.py
src/app/contracts/: rag_schemas.py
src/app/llm/: tokenizer.py
src/app/mcp/server/: audit.py
src/app/prompts/: registry.py  render.py
src/app/rag/: __init__.py  ask_service.py  formats.py  retrieve.py
src/app/services/: rag_agent.py  runner.py
src/tests/: conftest.py  test_acceptance.py  test_ask_mock.py  test_chunking.py  test_golden_rag.py  test_render.py  test_retrieve.py  test_runner_mock.py  test_tokenizer.py
src/tests/golden/: questions.json  questions_rus.json
(+55 files in other folders)
